AtlasOfLivingAustralia/DataQuality#199 Rename /profiles to /data-profiles
